--- a/web/web.html
+++ b/web/web.html
@@ -30,12 +30,12 @@
                     <p>City or destination</p>
                 </div>
                 <div class="city">
-                    <img src="../pic/Group.svg">
-                    <p>City or destination</p>
+                    <img src="../pic/Group.png">
+                    <p>Booking Dates</p>
                 </div>
                 <div class="city">
-                    <img src="../pic/Group.svg">
-                    <p>City or destination</p>
+                    <img src="../pic/sas.svg">
+                    <p>Guest & rooms</p>
                 </div>
 
                 <div id="bg">
@@ -44,20 +44,85 @@
             </div>
         </div>
 
-        <div class="res">
+        <div class="hotelpic">
             <div class="mainbooking">
                 <div class="flex">
                     <img src="../pic/image 7.png">
-                    <div class="flexs">
-                        <p>You will have everything nearby supermarket, buses, stations, cinemas, theaters, the carmen
-                            neighborhood, etc.</p>
-                    </div>
                 </div>
-                
+                <div class="flexs">
+                    <p>You will have everything nearby supermarket, buses, stations, cinemas, theaters, the carmen
+                        neighborhood, etc.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="hotelpic">
+            <div class="total">
+                <p class="bottoms">Display Total Price</p>
+                <p class="bottom">Includes all fees, before taxes </p>
+            </div>
+        </div>
+
+        <div class="wrap">
+            <div class="pass">
+                <div class="passtxt">
+                    <p id="pstxt">YHA Snowdon Pen-y-Pass</p>
+                </div>
+                <div class="passtxt2">
+                    <p id="pstxt2">Nestled at the foot of Mount Snowdon, the highest mountain in Wales, this hostel has
+                        a rich
+                        history tied to mountaineering and the great outdoors. Originally built as a coach inn in the
+                        late 1800s, it served travelers journeying through the rugged terrain of Snowdonia.
+                        What makes Pen-y-Pass special is its role in outdoor culture. Over the decades, it became a base
+                        for legendary climbers who tackled the Snowdon Horseshoe—a challenging circuit of ridges—and
+                        contributed to the development of modern mountaineering in the UK.</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="wrap">
+            <div class="located">
+                <div class="passtxt">
+                    <p id="locatedtxt">Located in a beautifully preserved Victorian mansion built in 1885, the HI
+                        Sacramento Hostel
+                        offers a glimpse into the grandeur of California's past. Originally the home of a wealthy gold
+                        prospector, the mansion later became a boarding house and eventually a hostel. Its elegant
+                        architecture, complete with stained glass windows, carved wooden staircases, and period
+                        furnishings, makes it a unique blend of history and hospitality.</p>
+                </div>
+                <div class="passtxt2">
+                    <p id="locatedtxt2">HI Sacramento Hostel (Sacramento, USA)</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="wrap">
+            <div class="clink">
+                <div class="passtxt">
+                    <p>Clink78 Hostel (London, UK)</p>
+                </div>
+                <div class="passtxt2">
+                    <p>Once a courthouse in the heart of London, Clink78 Hostel is steeped in history. Built in the 19th
+                        century, the building was where Charles Dickens worked as a court reporter, inspiring elements
+                        of his famous novel Oliver Twist. In the 20th century, it served as a magistrates' court and
+                        famously hosted trials for punk bands like The Clash. Today, the hostel preserves its legal
+                        heritage—guests can stay in refurbished prison cells and relax in the courtroom-turned-lounge.
+                    </p>
+                </div>
             </div>
         </div>
     </main>
-    </header>
+
+    <footer>
+        <div class="footer">
+            <div class="footerborder">
+                <img src="../pic/Social icon.svg">
+                <img src="../pic/Social icon (1).svg">
+                <img src="../pic/Social icon (2).svg">
+                <img src="../pic/Social icon (3).svg">
+            </div>
+        </div>
+    </footer>
 
 </body>
 
