--- a/web/web.html
+++ b/web/web.html
@@ -120,6 +120,9 @@
                 <img src="../pic/Social icon (1).svg">
                 <img src="../pic/Social icon (2).svg">
                 <img src="../pic/Social icon (3).svg">
+                <img src="../pic/Social icon (4).svg">
+                <img src="../pic/Social icon (5).svg">
+                <img src="../pic/Social icon (6).svg">
             </div>
         </div>
     </footer>
